Proyecto 2/Kubernetes/Linkerd/deploy.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "1"
    creationTimestamp: "2021-12-27T05:25:10Z"
    generation: 1
    labels:
      app: blue
    name: blue
    namespace: minamespace
    resourceVersion: "113523"
    uid: 326a94ba-0837-4b5c-9714-3b7a77011259
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: blue
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        creationTimestamp: null
        labels:
          app: blue
      spec:
        containers:
        - image: bernaldrpp/blue
          imagePullPolicy: Always
          name: blue
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: "2021-12-27T05:25:13Z"
      lastUpdateTime: "2021-12-27T05:25:13Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    - lastTransitionTime: "2021-12-27T05:25:10Z"
      lastUpdateTime: "2021-12-27T05:25:13Z"
      message: ReplicaSet "blue-5c68677659" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    observedGeneration: 1
    readyReplicas: 1
    replicas: 1
    updatedReplicas: 1
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "1"
    creationTimestamp: "2021-12-27T05:24:37Z"
    generation: 1
    labels:
      app: dummy
    name: dummy
    namespace: minamespace
    resourceVersion: "113302"
    uid: f00ab804-0716-4f59-9efc-b41c9ea51b7f
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: dummy
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        creationTimestamp: null
        labels:
          app: dummy
      spec:
        containers:
        - image: bernaldrpp/green
          imagePullPolicy: Always
          name: dummy
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: "2021-12-27T05:24:39Z"
      lastUpdateTime: "2021-12-27T05:24:39Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    - lastTransitionTime: "2021-12-27T05:24:37Z"
      lastUpdateTime: "2021-12-27T05:24:39Z"
      message: ReplicaSet "dummy-6ffbd4bc64" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    observedGeneration: 1
    readyReplicas: 1
    replicas: 1
    updatedReplicas: 1
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "1"
    creationTimestamp: "2021-12-27T05:25:16Z"
    generation: 1
    labels:
      app: green
    name: green
    namespace: minamespace
    resourceVersion: "113578"
    uid: 0bc8ec2f-504f-42df-a11d-c5c8a86aeea2
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: green
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        creationTimestamp: null
        labels:
          app: green
      spec:
        containers:
        - image: bernaldrpp/green
          imagePullPolicy: Always
          name: green
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: "2021-12-27T05:25:18Z"
      lastUpdateTime: "2021-12-27T05:25:18Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    - lastTransitionTime: "2021-12-27T05:25:16Z"
      lastUpdateTime: "2021-12-27T05:25:18Z"
      message: ReplicaSet "green-67544f78c4" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    observedGeneration: 1
    readyReplicas: 1
    replicas: 1
    updatedReplicas: 1
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
