Proyecto 2/Kubernetes/Linkerd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dummy-ingress
  namespace: minamespace
  annotations:
    nginx.ingress.kubernetes.io/service-upstream: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: dummy.labso1-vac2021.tk
      http:
        paths:
          - backend:
              service:
                name: dummy
                port: 
                  number: 8080
            path: /
            pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blue-ingress
  namespace: minamespace
  annotations:
    nginx.ingress.kubernetes.io/service-upstream: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: blue.labso1-vac2021.tk
      http:
        paths:
          - backend:
              service:
                name: blue
                port: 
                  number: 8080
            path: /
            pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: green-ingress
  namespace: minamespace
  annotations:
    nginx.ingress.kubernetes.io/service-upstream: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: green.labso1-vac2021.tk
      http:
        paths:
          - backend:
              service:
                name: green
                port: 
                  number: 8080
            path: /
            pathType: Prefix
